Updated to UnlockedVault and 1.12.11 working on bank system.